# rainbowlog

./: .gitignore  LICENSE  README.md  __init__py  ci.yml  pyproject.toml
.github/workflows/: automerge.yml  docs-and-format.yml  docs.yml  main.yml  publish.yml  tests.yml
conda-recipe/: meta.yaml
docs/rainbowlog/: ansi.html  formatter.html  index.html
rainbowlog/: __init__.py  _formatter.py  ansi.py  formatter.py
tests/: test_formatter.py
