[tool.poetry]
name = "rainbowlog"
# Version is overwritten at build time by CI based on git tag
version = "0"
description = "Format your python logs with colours based on the log levels."
authors = ["Abraham Murciano <abrahammurciano@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/abrahammurciano/rainbowlog"
documentation = "https://abrahammurciano.github.io/rainbowlog/rainbowlog/"
keywords = ["logging", "color"]

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = ">=4.11"
constyle = ">=2.0.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.1"
pdoc3 = ">=0.10.0"
types-toml = ">=0.10.7"
black = { version = ">=22.3.0", allow-prereleases = true }
mypy = ">=0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
